# satoshi-quiz-saas

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: __main__.py  app.py  configs.py  database.py  migration.py
src/interfaces/api/: __init__.py  schemas.py
src/interfaces/api/middlewares/: authentication.py
src/interfaces/api/routes/: quiz.py  reward.py  setup.py  wallet.py
src/lib/: bech32.py  hygraph.py  lndhub.py  lnurl.py  memberstack.py
src/services/: firebase.py  hygraph.py  lndhub.py  memberstack.py
